tests/tooling/fixtures/native/execution/positive/switch_default_path.objc3
module SwitchDefaultPathExec;

fn main() -> i32 {
  let x = 9;
  let out = 0;
  switch (x) {
    case 1:
      out = 11;
      break;
    case 2:
      out = 22;
      break;
    default:
      out = 77;
      break;
  }
  return out;
}
