tests/tooling/fixtures/native/execution/negative/switch_duplicate_default.objc3
module SwitchDuplicateDefaultExec;

fn main() -> i32 {
  let x = 2;
  switch (x) {
    default:
      return 1;
    default:
      return 2;
  }
  return 0;
}
